// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`commentsContainer Snapshot > renders default state with no comments correctly 1`] = `
<div
  class="comments"
  style="background: transparent;"
>
  <div class="innerWrapper">
    <div class="userName">
      <div class="addComment">
        <div class="
          rounded-t-full
          w-12
        ">
          <!-- v-if -->
        </div>
        <div class="
          commentBox
          dark:text-white
          text-black
        ">
          <textarea
            aria-label="Add comment"
            class="
              addComment
              bg-white
              border-neutral-500
              dark:bg-neutral-800
              dark:border-neutral-400
            "
            name="addComment"
            placeholder="Add a comment"
            spellcheck="true"
          ></textarea>
          <!-- v-if -->
          <!-- v-if -->
        </div>
      </div>
    </div>
    <transition-group-stub
      appear="true"
      css="true"
      name="fade"
      persisted="false"
      tag="div"
    ></transition-group-stub>
    <!-- v-if -->
  </div>
</div>
`;

exports[`commentsContainer Snapshot > renders with a single comment correctly 1`] = `
<div
  class="comments"
  style="background: transparent;"
>
  <div class="innerWrapper">
    <div class="userName">
      <div class="addComment">
        <div class="
          rounded-t-full
          w-12
        ">
          <!-- v-if -->
        </div>
        <div class="
          commentBox
          dark:text-white
          text-black
        ">
          <textarea
            aria-label="Add comment"
            class="
              addComment
              bg-white
              border-neutral-500
              dark:bg-neutral-800
              dark:border-neutral-400
            "
            name="addComment"
            placeholder="Add a comment"
            spellcheck="true"
          ></textarea>
          <!-- v-if -->
          <!-- v-if -->
        </div>
      </div>
    </div>
    <transition-group-stub
      appear="true"
      css="true"
      name="fade"
      persisted="false"
      tag="div"
    >
      <div class="comment-wrapper">
        <div class="wrapper">
          <div class="
            rounded-t-full
            w-12
          ">
            <!---->
          </div>
          <div class="comment-wrapper">
            <div class="name-wrapper">
              <div class="
                name
                text-(--ui-primary)
              ">
                John Doe
              </div>
              <span class="dot">
                •
              </span>
              <span
                class="time"
                title="Thursday, January 1, 1970 at 9:00:01 AM"
              >
                just now
              </span>
              <!-- v-if -->
              <div class="
                expand
                hover:text-(--ui-primary)
              ">
                <span title="Hide Comment">
                  −
                </span>
              </div>
            </div>
            <div class="
              bg-white
              comment
              dark:bg-neutral-800
              dark:text-white
              text-black
            ">
              Great post!
            </div>
            <div
              class="
                comment-box
                dark:text-white
                text-black
              "
              style="display: none;"
            >
              <div class="
                text-(--ui-primary)
                user-name
              ">
                John Doe
              </div>
              <textarea
                aria-label="Add Comment"
                class="
                  add-comment
                  bg-white
                  dark:bg-neutral-800
                "
                name="addUpdate"
                placeholder="Update message"
                spellcheck="false"
              ></textarea>
              <button
                aria-label="Update"
                class="
                  bg-primary
                  hover:bg-primary-800
                "
              >
                <span>
                  Update
                </span>
              </button>
              <div class="
                bg-primary
                remaining-letter
              ">
                <span>
                  1000
                </span>
              </div>
            </div>
            <div
              class="
                hover:text-(--ui-primary)
                reply
              "
              style="display: none;"
            >
              <div>
                Never mind
              </div>
            </div>
            <div class="reply">
              <div class="hover:text-(--ui-primary)">
                Reply
              </div>
              <!-- v-if -->
              <!-- v-if -->
            </div>
            <!-- v-if -->
            <transition-group-stub
              appear="true"
              css="true"
              name="fade"
              persisted="false"
              tag="div"
            ></transition-group-stub>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </transition-group-stub>
    <!-- v-if -->
  </div>
</div>
`;

exports[`commentsContainer Snapshot > renders with multiple comments and custom styling correctly 1`] = `
<div
  class="comments"
  style="background: #f0f0f0;"
>
  <div class="innerWrapper">
    <div class="userName">
      <div class="addComment">
        <div class="
          rounded-t-full
          w-12
        ">
          <!-- v-if -->
        </div>
        <div class="
          commentBox
          dark:text-white
          text-black
        ">
          <textarea
            aria-label="Add comment"
            class="
              addComment
              bg-white
              border-neutral-500
              dark:bg-neutral-800
              dark:border-neutral-400
            "
            name="addComment"
            placeholder="Add a comment"
            spellcheck="true"
          ></textarea>
          <!-- v-if -->
          <!-- v-if -->
        </div>
      </div>
    </div>
    <transition-group-stub
      appear="true"
      css="true"
      name="fade"
      persisted="false"
      tag="div"
    >
      <div class="comment-wrapper">
        <div class="wrapper">
          <div class="
            rounded-t-full
            w-12
          ">
            <img
              alt="Avatar"
              class="
                h-12
                p-1
                rounded-full
                w-12
              "
              data-nuxt-img=""
              src="https://example.com/alice.jpg"
              srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x"
            />
          </div>
          <div class="comment-wrapper">
            <div class="name-wrapper">
              <div class="
                name
                text-(--ui-primary)
              ">
                Alice
              </div>
              <span class="dot">
                •
              </span>
              <span
                class="time"
                title="Thursday, January 1, 1970 at 9:00:01 AM"
              >
                just now
              </span>
              <!-- v-if -->
              <div class="
                expand
                hover:text-(--ui-primary)
              ">
                <span title="Hide Comment">
                  −
                </span>
              </div>
            </div>
            <div class="
              bg-white
              comment
              dark:bg-neutral-800
              dark:text-white
              text-black
            ">
              Nice work!
            </div>
            <div
              class="
                comment-box
                dark:text-white
                text-black
              "
              style="display: none;"
            >
              <div class="
                text-(--ui-primary)
                user-name
              ">
                Alice
              </div>
              <textarea
                aria-label="Add Comment"
                class="
                  add-comment
                  bg-white
                  dark:bg-neutral-800
                "
                name="addUpdate"
                placeholder="Update message"
                spellcheck="false"
              ></textarea>
              <button
                aria-label="Update"
                class="
                  bg-primary
                  hover:bg-primary-800
                "
              >
                <span>
                  Update
                </span>
              </button>
              <div class="
                bg-primary
                remaining-letter
              ">
                <span>
                  1000
                </span>
              </div>
            </div>
            <div
              class="
                hover:text-(--ui-primary)
                reply
              "
              style="display: none;"
            >
              <div>
                Never mind
              </div>
            </div>
            <div class="reply">
              <div class="hover:text-(--ui-primary)">
                Reply
              </div>
              <!-- v-if -->
              <!-- v-if -->
            </div>
            <!-- v-if -->
            <transition-group-stub
              appear="true"
              css="true"
              name="fade"
              persisted="false"
              tag="div"
            ></transition-group-stub>
            <!-- v-if -->
          </div>
        </div>
      </div>
      <div class="comment-wrapper">
        <div class="wrapper">
          <div class="
            rounded-t-full
            w-12
          ">
            <img
              alt="Avatar"
              class="
                h-12
                p-1
                rounded-full
                w-12
              "
              data-nuxt-img=""
              src="https://example.com/bob.jpg"
              srcset="https://example.com/bob.jpg 1x, https://example.com/bob.jpg 2x"
            />
          </div>
          <div class="comment-wrapper">
            <div class="name-wrapper">
              <div class="
                name
                text-(--ui-primary)
              ">
                Bob
              </div>
              <span class="dot">
                •
              </span>
              <span
                class="time"
                title="Thursday, January 1, 1970 at 9:00:01 AM"
              >
                just now
              </span>
              <!-- v-if -->
              <div class="
                expand
                hover:text-(--ui-primary)
              ">
                <span title="Hide Comment">
                  −
                </span>
              </div>
            </div>
            <div class="
              bg-white
              comment
              dark:bg-neutral-800
              dark:text-white
              text-black
            ">
              I disagree
            </div>
            <div
              class="
                comment-box
                dark:text-white
                text-black
              "
              style="display: none;"
            >
              <div class="
                text-(--ui-primary)
                user-name
              ">
                Bob
              </div>
              <textarea
                aria-label="Add Comment"
                class="
                  add-comment
                  bg-white
                  dark:bg-neutral-800
                "
                name="addUpdate"
                placeholder="Update message"
                spellcheck="false"
              ></textarea>
              <button
                aria-label="Update"
                class="
                  bg-primary
                  hover:bg-primary-800
                "
              >
                <span>
                  Update
                </span>
              </button>
              <div class="
                bg-primary
                remaining-letter
              ">
                <span>
                  1000
                </span>
              </div>
            </div>
            <div
              class="
                hover:text-(--ui-primary)
                reply
              "
              style="display: none;"
            >
              <div>
                Never mind
              </div>
            </div>
            <div class="reply">
              <div class="hover:text-(--ui-primary)">
                Reply
              </div>
              <!-- v-if -->
              <!-- v-if -->
            </div>
            <!-- v-if -->
            <transition-group-stub
              appear="true"
              css="true"
              name="fade"
              persisted="false"
              tag="div"
            ></transition-group-stub>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </transition-group-stub>
    <!-- v-if -->
  </div>
</div>
`;

exports[`commentsContainer Snapshot > renders with nested comment correctly 1`] = `
<div
  class="comments"
  style="background: transparent;"
>
  <div class="innerWrapper">
    <div class="userName">
      <div class="addComment">
        <div class="
          rounded-t-full
          w-12
        ">
          <!-- v-if -->
        </div>
        <div class="
          commentBox
          dark:text-white
          text-black
        ">
          <textarea
            aria-label="Add comment"
            class="
              addComment
              bg-white
              border-neutral-500
              dark:bg-neutral-800
              dark:border-neutral-400
            "
            name="addComment"
            placeholder="Add a comment"
            spellcheck="true"
          ></textarea>
          <!-- v-if -->
          <!-- v-if -->
        </div>
      </div>
    </div>
    <transition-group-stub
      appear="true"
      css="true"
      name="fade"
      persisted="false"
      tag="div"
    >
      <div class="comment-wrapper">
        <div class="wrapper">
          <div class="
            rounded-t-full
            w-12
          ">
            <img
              alt="Avatar"
              class="
                h-12
                p-1
                rounded-full
                w-12
              "
              data-nuxt-img=""
              src="https://example.com/avatar.jpg"
              srcset="https://example.com/avatar.jpg 1x, https://example.com/avatar.jpg 2x"
            />
          </div>
          <div class="comment-wrapper">
            <div class="name-wrapper">
              <div class="
                name
                text-(--ui-primary)
              ">
                John Doe
              </div>
              <span class="dot">
                •
              </span>
              <span
                class="time"
                title="Thursday, January 1, 1970 at 9:00:01 AM"
              >
                just now
              </span>
              <!-- v-if -->
              <div class="
                expand
                hover:text-(--ui-primary)
              ">
                <span title="Hide Comment">
                  −
                </span>
              </div>
            </div>
            <div class="
              bg-white
              comment
              dark:bg-neutral-800
              dark:text-white
              text-black
            ">
              Great post!
            </div>
            <div
              class="
                comment-box
                dark:text-white
                text-black
              "
              style="display: none;"
            >
              <div class="
                text-(--ui-primary)
                user-name
              ">
                John Doe
              </div>
              <textarea
                aria-label="Add Comment"
                class="
                  add-comment
                  bg-white
                  dark:bg-neutral-800
                "
                name="addUpdate"
                placeholder="Update message"
                spellcheck="false"
              ></textarea>
              <button
                aria-label="Update"
                class="
                  bg-primary
                  hover:bg-primary-800
                "
              >
                <span>
                  Update
                </span>
              </button>
              <div class="
                bg-primary
                remaining-letter
              ">
                <span>
                  1000
                </span>
              </div>
            </div>
            <div
              class="
                hover:text-(--ui-primary)
                reply
              "
              style="display: none;"
            >
              <div>
                Never mind
              </div>
            </div>
            <div class="reply">
              <div class="hover:text-(--ui-primary)">
                Reply
              </div>
              <span class="dot">
                •
              </span>
              <div class="hover:text-(--ui-primary)">
                Hide replies
              </div>
              <!-- v-if -->
            </div>
            <!-- v-if -->
            <transition-group-stub
              appear="true"
              css="true"
              name="fade"
              persisted="false"
              tag="div"
            >
              <div class="comment-wrapper">
                <div class="wrapper">
                  <div class="
                    rounded-t-full
                    w-12
                  ">
                    <img
                      alt="Avatar"
                      class="
                        h-12
                        p-1
                        rounded-full
                        w-12
                      "
                      data-nuxt-img=""
                      src="https://example.com/alice.jpg"
                      srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x"
                    />
                  </div>
                  <div class="comment-wrapper">
                    <div class="name-wrapper">
                      <div class="
                        name
                        text-(--ui-primary)
                      ">
                        Alice
                      </div>
                      <span class="dot">
                        •
                      </span>
                      <span
                        class="time"
                        title="Thursday, January 1, 1970 at 9:00:01 AM"
                      >
                        just now
                      </span>
                      <!-- v-if -->
                      <div class="
                        expand
                        hover:text-(--ui-primary)
                      ">
                        <span title="Hide Comment">
                          −
                        </span>
                      </div>
                    </div>
                    <div class="
                      bg-white
                      comment
                      dark:bg-neutral-800
                      dark:text-white
                      text-black
                    ">
                      Nice work!
                    </div>
                    <div
                      class="
                        comment-box
                        dark:text-white
                        text-black
                      "
                      style="display: none;"
                    >
                      <div class="
                        text-(--ui-primary)
                        user-name
                      ">
                        Alice
                      </div>
                      <textarea
                        aria-label="Add Comment"
                        class="
                          add-comment
                          bg-white
                          dark:bg-neutral-800
                        "
                        name="addUpdate"
                        placeholder="Update message"
                        spellcheck="false"
                      ></textarea>
                      <button
                        aria-label="Update"
                        class="
                          bg-primary
                          hover:bg-primary-800
                        "
                      >
                        <span>
                          Update
                        </span>
                      </button>
                      <div class="
                        bg-primary
                        remaining-letter
                      ">
                        <span>
                          1000
                        </span>
                      </div>
                    </div>
                    <div
                      class="
                        hover:text-(--ui-primary)
                        reply
                      "
                      style="display: none;"
                    >
                      <div>
                        Never mind
                      </div>
                    </div>
                    <div class="reply">
                      <div class="hover:text-(--ui-primary)">
                        Reply
                      </div>
                      <span class="dot">
                        •
                      </span>
                      <div class="hover:text-(--ui-primary)">
                        Hide replies
                      </div>
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                    <transition-group-stub
                      appear="true"
                      css="true"
                      name="fade"
                      persisted="false"
                      tag="div"
                    >
                      <div class="comment-wrapper">
                        <div class="wrapper">
                          <div class="
                            rounded-t-full
                            w-12
                          ">
                            <img
                              alt="Avatar"
                              class="
                                h-12
                                p-1
                                rounded-full
                                w-12
                              "
                              data-nuxt-img=""
                              src="https://example.com/alice.jpg"
                              srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x"
                            />
                          </div>
                          <div class="comment-wrapper">
                            <div class="name-wrapper">
                              <div class="
                                name
                                text-(--ui-primary)
                              ">
                                Alice
                              </div>
                              <span class="dot">
                                •
                              </span>
                              <span
                                class="time"
                                title="Thursday, January 1, 1970 at 9:00:01 AM"
                              >
                                just now
                              </span>
                              <!-- v-if -->
                              <div class="
                                expand
                                hover:text-(--ui-primary)
                              ">
                                <span title="Hide Comment">
                                  −
                                </span>
                              </div>
                            </div>
                            <div class="
                              bg-white
                              comment
                              dark:bg-neutral-800
                              dark:text-white
                              text-black
                            ">
                              Nice work!
                            </div>
                            <div
                              class="
                                comment-box
                                dark:text-white
                                text-black
                              "
                              style="display: none;"
                            >
                              <div class="
                                text-(--ui-primary)
                                user-name
                              ">
                                Alice
                              </div>
                              <textarea
                                aria-label="Add Comment"
                                class="
                                  add-comment
                                  bg-white
                                  dark:bg-neutral-800
                                "
                                name="addUpdate"
                                placeholder="Update message"
                                spellcheck="false"
                              ></textarea>
                              <button
                                aria-label="Update"
                                class="
                                  bg-primary
                                  hover:bg-primary-800
                                "
                              >
                                <span>
                                  Update
                                </span>
                              </button>
                              <div class="
                                bg-primary
                                remaining-letter
                              ">
                                <span>
                                  1000
                                </span>
                              </div>
                            </div>
                            <div
                              class="
                                hover:text-(--ui-primary)
                                reply
                              "
                              style="display: none;"
                            >
                              <div>
                                Never mind
                              </div>
                            </div>
                            <div class="reply">
                              <div class="hover:text-(--ui-primary)">
                                Reply
                              </div>
                              <!-- v-if -->
                              <!-- v-if -->
                            </div>
                            <!-- v-if -->
                            <transition-group-stub
                              appear="true"
                              css="true"
                              name="fade"
                              persisted="false"
                              tag="div"
                            ></transition-group-stub>
                            <!-- v-if -->
                          </div>
                        </div>
                      </div>
                      <div class="comment-wrapper">
                        <div class="wrapper">
                          <div class="
                            rounded-t-full
                            w-12
                          ">
                            <img
                              alt="Avatar"
                              class="
                                h-12
                                p-1
                                rounded-full
                                w-12
                              "
                              data-nuxt-img=""
                              src="https://example.com/alice.jpg"
                              srcset="https://example.com/alice.jpg 1x, https://example.com/alice.jpg 2x"
                            />
                          </div>
                          <div class="comment-wrapper">
                            <div class="name-wrapper">
                              <div class="
                                name
                                text-(--ui-primary)
                              ">
                                Alice
                              </div>
                              <span class="dot">
                                •
                              </span>
                              <span
                                class="time"
                                title="Thursday, January 1, 1970 at 9:00:01 AM"
                              >
                                just now
                              </span>
                              <!-- v-if -->
                              <div class="
                                expand
                                hover:text-(--ui-primary)
                              ">
                                <span title="Hide Comment">
                                  −
                                </span>
                              </div>
                            </div>
                            <div class="
                              bg-white
                              comment
                              dark:bg-neutral-800
                              dark:text-white
                              text-black
                            ">
                              Nice work!
                            </div>
                            <div
                              class="
                                comment-box
                                dark:text-white
                                text-black
                              "
                              style="display: none;"
                            >
                              <div class="
                                text-(--ui-primary)
                                user-name
                              ">
                                Alice
                              </div>
                              <textarea
                                aria-label="Add Comment"
                                class="
                                  add-comment
                                  bg-white
                                  dark:bg-neutral-800
                                "
                                name="addUpdate"
                                placeholder="Update message"
                                spellcheck="false"
                              ></textarea>
                              <button
                                aria-label="Update"
                                class="
                                  bg-primary
                                  hover:bg-primary-800
                                "
                              >
                                <span>
                                  Update
                                </span>
                              </button>
                              <div class="
                                bg-primary
                                remaining-letter
                              ">
                                <span>
                                  1000
                                </span>
                              </div>
                            </div>
                            <div
                              class="
                                hover:text-(--ui-primary)
                                reply
                              "
                              style="display: none;"
                            >
                              <div>
                                Never mind
                              </div>
                            </div>
                            <div class="reply">
                              <div class="hover:text-(--ui-primary)">
                                Reply
                              </div>
                              <!-- v-if -->
                              <!-- v-if -->
                            </div>
                            <!-- v-if -->
                            <transition-group-stub
                              appear="true"
                              css="true"
                              name="fade"
                              persisted="false"
                              tag="div"
                            ></transition-group-stub>
                            <!-- v-if -->
                          </div>
                        </div>
                      </div>
                    </transition-group-stub>
                    <!-- v-if -->
                  </div>
                </div>
              </div>
            </transition-group-stub>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </transition-group-stub>
    <!-- v-if -->
  </div>
</div>
`;
